// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Bar Bottom Strike 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Bottom Strike 2`] = `
Array [
  0.35,
  0,
  0.007,
  0,
  0.35,
  -0.1546,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Bottom Strike 3`] = `
Array [
  0.04004,
  -0.01264,
  -0.00602,
  0.08408,
  0.00602,
  -0.01824,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Strike 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Strike 2`] = `
Array [
  0.35,
  0,
  0.007,
  0,
  0.35,
  0.1693,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Strike 3`] = `
Array [
  0.04004,
  -0.01264,
  -0.00602,
  0.08408,
  0.00602,
  -0.01824,
  0,
  0,
  1,
]
`;
